Network-Policy's/allow-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-ingress
  namespace: dhruv
spec:
  #pod in which networkpolicy apply
  podSelector: {}

  #policy types
  policyTypes:
  - Ingress
  #From where traffic comes
  ingress:
  - {}
