Network-Policy's/allow-egress-to-ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-ip
  namespace: dhruv
spec:
  #pod in which networkpolicy apply
  podSelector:
    matchLabels:
      app: my-app

  #policy types
  policyTypes:
  - Egress

  #Where our pod ("my-app") can send outside request
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.1.0/24
